crates/mabo-parser/tests/inputs/invalid/enum_unnamed_tuple_empty.mabo
enum Sample {
    One @1,
    Two(() @1) @2,
}
